fix: remove wrong margin

--- a/frontend/src/components/Button/Button.module.scss
+++ b/frontend/src/components/Button/Button.module.scss
@@ -7,8 +7,6 @@
   border-radius: 3px;
   padding: 0px 15px;
   color: #0f5b99;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 .button[data-primary="true"] {
   color: white;
